#   PROCESS THAT IS TIME SENSITIVE, UNMONITORED, OR
#   PERSISTENCE CRITICAL. DO NOT USE THIS SOFTWARE WITHOUT
#   ANOTHER METHOD iOR RUNNING THE PROCESS YOU WISH TO
#   AUTOMATE WITH Net::FullAuto. DO NOT USE IN/FOR A PROCESS
#   WHERE FAILURE OF "ANY KIND" IS UNACCEPTABLE.
#
################################################################


2010-11-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.72 released.

        * added module requirements for Term::Menus to
         "requires" list for Windows installations.


2010-11-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.71 released.

        * Fixed small bug in Makefile.PL.

        * Added error message informing user of necessary
          permission requirements when writable directory
          is not located during FullAuto initialization.


2010-11-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.70 released.

        * Removed use CPAN::LWP::UserAgent statement.


2010-11-26  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.69 released.

        * Fixed replacement list error generating warning.


2010-11-25  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.68 released.

        * Modified Makefile.PL again to load
          build dependencies.


2010-11-24  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.67 released.

        * Modified Makefile.PL again to load
          build dependencies.


2010-11-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.66 released.

        * Modified Makefile.PL again to load
          build dependencies.


2010-11-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.65 released.

        * Modified Makefile.PL again to load
          Term::Menus dependencies.


2010-11-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.64 released.
