@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 c8aa89edf590f422dff197012cf8cf382b23493d ChangeLog
+SHA1 0d39801049e1475a791825235cf1d6c08feda6f3 ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 076b96a40ee3e10d1bee150578c53821e00014c0 MANIFEST
-SHA1 bd251cf445dbb012e2d7643ac6a0ddfce038bb97 META.yml
-SHA1 bb8f21e316eec4fa41e86b09207ac9278b92c378 Makefile.PL
+SHA1 537be6e7ff986e99c27c1d6c175e2b552bf7f5d0 META.yml
+SHA1 44e55bae6baaeafe5e2ef7bfc0c2729cc80e9e41 Makefile.PL
 SHA1 fd7990a8a2e6a3211e92195eea930d61fb490eaa README
 SHA1 56058fc8d72a96f1cb02917fdf636c1abb94e51d bin/fullauto.pl
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -33,7 +33,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 b134c21e2971ddaf232b7c879c01c002453de4b9 lib/Net/FullAuto.pm
+SHA1 38a7b4d84ed751f1ec4dff01f6985df6104e6adb lib/Net/FullAuto.pm
 SHA1 5ff6ce13b0ff87967726e71d0ef53ba0b3884ba7 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 1c547d9c70bbd223abf6d28018ca47076501063a lib/Net/FullAuto/Custom/README
 SHA1 11062399629ac5a8c01071ec2c876c79091f2482 lib/Net/FullAuto/Distro/fa_code.pm
@@ -47,7 +47,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAkz0F9YACgkQdsVAdUjO9IkZ5ACcDcGOMWnrZ5TOY2FMYauTOSZB
-1+kAoJnLTCzlj1d/gsYSuPEGB2HeKY7A
-=Wf/g
+iEYEARECAAYFAkz1AF0ACgkQdsVAdUjO9Ik+7wCbB0QPFjG9LhqLgLBKrctDrDPc
+v+sAn3yigjLRJtFx6vZQVvWADFVVOQwX
+=RDiB
 -----END PGP SIGNATURE-----
